add bull dashboard
