# api-swagger.yaml
@@ -32,6 +32,14 @@ paths:
                 properties:
                   token:
                     type: string
+  /users/{uuid}:
+    put:
+      tags:
+        - user
+      summary: Put User
+      responses:
+        '200':
+          description: Ok
   /users/all:
     get:
       tags:
