# router/users-route.js
@@ -6,7 +6,8 @@ const router = express.Router();
 
 router.get('/all', users.getUsers);
 router.post('/', users.login);
-router.put('/:uuid', users.verifyJwt, users.updateUser, users.updateAccount);
+// router.put('/:uuid', users.verifyJwt, users.updateUser, users.updateAccount);
+router.put('/:uuid', users.verifyJwt, users.updateUser);
 // router.put('/:uuid/pin', users.setPin);
 // for admin
 router.delete('/:uuid', users.deleteUser);
